# pysarif

./: LICENSE  README.md  pyproject.toml  setup.py  test.py
generator/: main.py
generator/jschema_to_python/: class_generator.py  driver.py  init_file_generator.py  object_model_module_generator.py  python_file_generator.py  utilities.py
src/pysarif/: __init__.py  _address.py  _artifact.py  _artifact_change.py  _artifact_content.py  _artifact_location.py  _attachment.py  _code_flow.py  _configuration_override.py  _conversion.py  _edge.py  _edge_traversal.py  _exception.py  _external_properties.py  _external_property_file_reference.py  _external_property_file_references.py  _fix.py  _graph.py  _graph_traversal.py  _invocation.py  _loader.py  _location.py  _location_relationship.py  _logical_location.py  _message.py  _multiformat_message_string.py  _node.py  _notification.py  _physical_location.py  _property_bag.py  _rectangle.py  _region.py  _replacement.py  _reporting_configuration.py  _reporting_descriptor.py  _reporting_descriptor_reference.py  _reporting_descriptor_relationship.py  _result.py  _result_provenance.py  _run.py  (+15 more)
